--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,11 +48,12 @@ jobs:
           plugin_music: yes
           plugin_music_limit: 4
           plugin_music_mode: top
-          plugin_music_playlist: https://open.spotify.com/playlist/2L3055vkVeYVpElxLkty7a?si=e5da3f19ce75431e
+          plugin_music_playlist: https://open.spotify.com/embed/playlist/2L3055vkVeYVpElxLkty7a
           plugin_music_provider: spotify
           plugin_music_time_range: short
           plugin_music_top_type: tracks
           plugin_music_user: .user.login
+          plugin_music_token: "${{ secrets.SPOTIFY_CLIENT_ID }}, ${{ secrets.SPOTIFY_CLIENT_SECRET }}, ${{ secrets.SPOTIFY_REFRESH_TOKEN }}"
           plugin_notable: yes
           plugin_notable_from: organization
           plugin_notable_types: commit
