--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,7 +47,7 @@ jobs:
           plugin_introduction_title: yes
           plugin_music: yes
           plugin_music_limit: 4
-          plugin_music_mode: top
+          plugin_music_mode: playlist
           plugin_music_playlist: https://open.spotify.com/embed/playlist/2L3055vkVeYVpElxLkty7a
           plugin_music_provider: spotify
           plugin_music_time_range: short
