--- a/.github/workflows/monkeytype-readme.yml
+++ b/.github/workflows/monkeytype-readme.yml
@@ -29,6 +29,6 @@ jobs:
               uses: crazy-max/ghaction-github-pages@v4.0.0
               with:
                   target_branch: monkeytype-readme
-                  build_dir: monkeytype-readme-svg
+                  # build_dir: monkeytype-readme-svg
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
