--- a/.github/workflows/monkeytype-readme.yml
+++ b/.github/workflows/monkeytype-readme.yml
@@ -3,6 +3,7 @@ name: generate monkeytype readme svg
 on:
     schedule:
         - cron: "0 */24 * * *"
+    workflow_dispatch:        
 
 jobs:
     download-svg:
